adding in homepage and styling to others

--- a/src/components/ProjectCard/style.css
+++ b/src/components/ProjectCard/style.css
@@ -4,13 +4,11 @@ body {
 
 .card {
   background: rgb(0, 58, 53);
-  border-radius: 5px;
   height: 325px;
   margin: 1rem;
   position: relative;
   width: 325px;
   box-shadow: 0 3px 6px rgb(58, 58, 58), 0 3px 6px rgb(59, 59, 59);
-  text-align: left;
   font-family: sans-serif;
 }
 
@@ -25,6 +23,8 @@ body {
 }
 
 .card > .content {
+  display: flex;
+  flex-direction: column;
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
@@ -34,6 +34,8 @@ body {
 
 .card > .content > ul {
   list-style-type: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .card > .content > ul > li {
