--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -2,61 +2,37 @@ body {
   background-color: rgb(0, 18, 29);
 }
 
+.container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
 .nameHeader {
   font-size: 50px;
   font-family: 'Quicksand', sans-serif;
   color: rgb(0, 200, 200);
   display: flex;
   justify-content: center;
+  padding: 20px;
+}
+
+.profilePicture {
+  width: auto;
+  max-width: 300px;
+  height: auto;
+  max-height: 300px;
   margin-top: 50px;
+  margin-right: 20px;
 }
 
-.picture {
+.pictureAndText{
   display: flex;
-  justify-content: center;
-  margin-top: -150px;
-  margin-bottom: -150px;
+  flex-direction: row;
+  width: 100%;
 }
-
-.hexagon {
-  overflow: hidden;
-  visibility: hidden;
-  -webkit-transform: rotate(120deg);
-     -moz-transform: rotate(120deg);
-      -ms-transform: rotate(120deg);
-       -o-transform: rotate(120deg);
-          transform: rotate(120deg);
-  }
-.hexagon-in1 {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: rotate(-60deg);
-     -moz-transform: rotate(-60deg);
-      -ms-transform: rotate(-60deg);
-       -o-transform: rotate(-60deg);
-          transform: rotate(-60deg);
-  }
-.hexagon-in2 {
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: 48%;
-
-  background-image: url('../../images/profile.jpg');
-  visibility: visible;
-  -webkit-transform: rotate(-60deg);
-     -moz-transform: rotate(-60deg);
-      -ms-transform: rotate(-60deg);
-       -o-transform: rotate(-60deg);
-          transform: rotate(-60deg);
-  }
-
-  .hexagon2 {
-    width: 450px;
-    height: 900px;
-    margin: 0px;
-    }
 
 .aboutText {
   font-size: 24px;
@@ -65,4 +41,5 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 50px;
+  width: 100%;
 }
